--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,9 @@ layout: default
         <h2 itemprop="name headline">{{ page.title }}</h2>
 
         <time class="post__date" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%-d %b %Y" }}</time>
+        {% for tag in page.tags %}
+          <span> {{ tag }} </span>
+        {% endfor %}
       </div>
     </div>
 
